--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
     <li><a href="#contact us">Contact Us</a></li>
   </ul>
   </header>
-<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
-<div id="id01" class="modal">  
+<button onclick="window.location.href='https://100trivia2ef60f26-2ef60f26-dev.auth.us-east-1.amazoncognito.com/login?response_type=code&client_id=50hm23e6l18u95lg5krr2kelfh&redirect_uri=https://auth.100trivia.com/';" 
+onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+<div id="id01" class="modal">
   <form class="modal-content animate" action="/action_page.php" method="post">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
       <img src="/img/signin-avatar.gif" alt="Avatar" class="avatar">
-    </div>
+    </div>  
 
     <div class="container">
       <p color="#364962" font-size="6,6,7" font-weight="700" class="Text-pXEYb clCvUW">Hello!</p>
