--- a/public/contactus.html
+++ b/public/contactus.html
@@ -23,9 +23,10 @@
 onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
   </ul>
   </header>
-  <div class="rte rte--contact">
+  <div class="grid__item medium-up--four-fifths medium-up--push-one-tenth">
+    <div class="rte rte--contact">
     <p>100Trivia is committed to maintain great communication with its users at all times. Should you have any questions or concerns please contact us at help@100trivia.com and a representative will get back to you within 1-3 business days.</p>
-  <form method="post" action="/contact#contact_form" id="contact_form" accept-charset="UTF-8" class="contact-form"><input type="hidden" name="form_type" value="contact"><input type="hidden" name="utf8" value="✓">
+    <form method="post" action="/contact#contact_form" id="contact_form" accept-charset="UTF-8" class="contact-form"><input type="hidden" name="form_type" value="contact"><input type="hidden" name="utf8" value="✓">
     <div class="grid">
       <div class="grid__item medium-up--one-half">
         <label for="ContactFormName" class="label--hidden">Name</label>
@@ -45,5 +46,6 @@ onclick="document.getElementById('id01').style.display='block'" style="width:aut
 
     <input type="submit" class="btn" value="Send">
   </form>
+  </div>
 </body>
 </html>
