--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@ onclick="document.getElementById('id01').style.display='block'" style="width:aut
 <h3 class="widget_title  widget_title--frontpage">
   Welcome to the Trivia's Guru World		<span class="widget_subtitle  widget_subtitle--frontpage">Challenge your friends a become a Trivia Guru</span>
       </h3>
+      <ul class="download-buttons">
+        <li><a href="/index.html" class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".6s" style="visibility: visible; animation-duration: 0.5s; animation-delay: 0.6s; animation-name: fadeInUp;"><img src="/img/google-play.png" alt="google-play"></a></li>
+        <li><a href="/index.html" class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".9s" style="visibility: visible; animation-duration: 0.5s; animation-delay: 0.9s; animation-name: fadeInUp;"><img src="/img/app-store.png" alt="app-store"></a></li>
+      </ul>
       <div class="feature-row__item feature-row__image-wrapper">
-        <a href="/img/timeranim.gif"></a>
       </div>
     <div class="feature-row__item feature-row__text">
           <h2 class="feature-row__heading h3 separator has-animated" data-animate="">The Ultimate Trivia Game</h2>
