--- a/index.html
+++ b/index.html
@@ -28,20 +28,24 @@ onclick="document.getElementById('id01').style.display='block'" style="width:aut
 <h3 class="widget_title  widget_title--frontpage">
   Welcome to the Trivia's Guru World		<span class="widget_subtitle  widget_subtitle--frontpage">Challenge your friends a become a Trivia Guru</span>
       </h3>
-      <ul class="download-buttons">
-        <li><a href="/index.html" class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".6s" style="visibility: visible; animation-duration: 0.5s; animation-delay: 0.6s; animation-name: fadeInUp;"><img src="/img/google-play.png" alt="google-play"></a></li>
-        <li><a href="/index.html" class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".9s" style="visibility: visible; animation-duration: 0.5s; animation-delay: 0.9s; animation-name: fadeInUp;"><img src="/img/app-store.png" alt="app-store"></a></li>
-      </ul>
       <div class="feature-row__item feature-row__image-wrapper">
       </div>
     <div class="feature-row__item feature-row__text">
           <h2 class="feature-row__heading h3 separator has-animated" data-animate="">The Ultimate Trivia Game</h2>
           <div class="rte-setting featured-row__subtext">
             <p> Are you bored? Well, take 30min of your day to educate yourself on various topics from Books, History, Music, Movies, Sports, Culture, Cuisine, you name it we have it.
+        <br>
         <br>This is an intellectual activity with the purpose to stimulate your brain and be more knowledgeable about pretty much anything. 
         <br>I mean, who doesn’t want to show off their Trivia knowledge?
+        <br>
         <br>Sign Up and show off your skills
         </p>
-      </div>     
+      </div>
+      <footer id="masthead" class="site-header  header--transparent" role="banner" style="padding-bottom: 0px;">
+        <ul class="download-buttons">
+        <li><a href="/index.html" class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".6s" style="visibility: visible; animation-duration: 0.5s; animation-delay: 0.6s; animation-name: fadeInUp;"><img src="/img/google-play.png" alt="google-play"></a></li>
+        <li><a href="/index.html" class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".9s" style="visibility: visible; animation-duration: 0.5s; animation-delay: 0.9s; animation-name: fadeInUp;"><img src="/img/app-store.png" alt="app-store"></a></li>
+      </ul>
+      </footer>
 </body>
 </html>
